# taype-drivers

./: .gitignore  .gitmodules  LICENSE  README.md  dune  dune-project
coil/: dune  taype_driver_coil.ml  taype_driver_coil.mli
emp/: dune  function_description.ml  taype_driver_emp.ml  taype_driver_emp.mli  type_description.ml
emp/ffi/: Makefile  emp-ffi.cpp  emp-ffi.h
emp/ffi/emp-ffi/: CMakeLists.txt
lib/: driver.ml  driver.mli  dune  intf.ml  naive.ml  naive.mli  party.ml  party.mli  plaintext_OInt0.ml  plaintext_OInt0.mli  smart.ml  smart.mli  taype_driver.ml  taype_driver.mli
plaintext/: dune  taype_driver_plaintext.ml  taype_driver_plaintext.mli
