(library
 (name taype_driver_emp)
 (public_name taype-driver-emp)
 (libraries taype_driver unix)
 ; ctypes backward compatibility shims warn sometimes; suppress them
 (flags
  (:standard -w -9-27))
 (ctypes
  (external_library_name libemp-ffi)
  (build_flags_resolver
   (vendored
    (c_flags :standard -I%{env:OPAM_SWITCH_PREFIX=}/include)
    (c_library_flags :standard -L%{env:OPAM_SWITCH_PREFIX=}/lib -lemp-ffi)))
  (headers
   (include "emp-ffi.h"))
  (type_description
   (instance Types)
   (functor Type_description))
  (function_description
   ; (concurrency unlocked)
   (instance Functions)
   (functor Function_description))
  (generated_types Types_generated)
  (generated_entry_point C)))
